--- a/bw4t-integration-test/pom.xml
+++ b/bw4t-integration-test/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-integration-test</artifactId>
-	<version>3.9.3-SNAPSHOT</version>
+	<version>3.9.3</version>
 	<description>This module integration test the entire bw4t system, to ensure the working state of the client and server.</description>
 	<url>http://www.github.com/eishub/bw4t</url>
 
