--- a/bw4t-integration-test/pom.xml
+++ b/bw4t-integration-test/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -73,13 +74,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.0.28-beta</version>
+			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -90,7 +91,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.1</version>
+				<version>2.22.2</version>
 				<configuration>
 					<workingDirectory>${basedir}/target/</workingDirectory>
 				</configuration>
@@ -108,9 +109,11 @@
 							<target>
 								<mkdir dir="target/run-server/" />
 								<java fork="true" spawn="true" dir="target/run-server/"
-									classpathref="maven.runtime.classpath" className="nl.tudelft.bw4t.server.environment.Launcher"
+									classpathref="maven.runtime.classpath"
+									className="nl.tudelft.bw4t.server.environment.Launcher"
 									args="-gui true -map Banana -key bw4tServerIntegration" />
-								<waitfor maxwait="1" maxwaitunit="minute" checkevery="200">
+								<waitfor maxwait="1" maxwaitunit="minute"
+									checkevery="200">
 									<socket server="localhost" port="8000" />
 								</waitfor>
 								<sleep seconds="5" />
@@ -137,11 +140,11 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
+				<version>2.22.2</version>
 				<configuration>
 					<excludes>
 						<exclude>**/*.java</exclude>
@@ -166,7 +169,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
