--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-server</artifactId>
-	<version>3.10.0</version>
+	<version>3.10.1-SNAPSHOT</version>
 	<url>http://www.github.com/eishub/bw4t</url>
 
 	<properties>
