--- a/bw4t-client/pom.xml
+++ b/bw4t-client/pom.xml
@@ -42,13 +42,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.10.19</version>
+			<version>3.11.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -128,7 +128,10 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>${java.main.class}</mainClass>
+									<manifestEntries>
+                    					<Main-Class>${java.main.class}</Main-Class>
+                    					<Multi-Release>true</Multi-Release>
+                  					</manifestEntries>
 								</transformer>
 							</transformers>
 							<filters>
