--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.glassfish.corba</groupId>
 			<artifactId>glassfish-corba-omgapi</artifactId>
-			<version>4.2.2</version>
+			<version>4.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.27.0-GA</version>
+			<version>3.28.0-GA</version>
 		</dependency>
 		<dependency>
 			<groupId>javolution</groupId>
@@ -91,7 +91,7 @@
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.15</version>
+			<version>1.4.17</version>
 		</dependency>
 		<dependency>
 			<groupId>saf.core</groupId>
@@ -127,13 +127,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.10.19</version>
+			<version>3.11.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -213,7 +213,10 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>${java.main.class}</mainClass>
+									<manifestEntries>
+                    					<Main-Class>${java.main.class}</Main-Class>
+                    					<Multi-Release>true</Multi-Release>
+                  					</manifestEntries>
 								</transformer>
 							</transformers>
 							<filters>
