added TODO about why it is not working on Java 16 and up now...

--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -108,7 +108,7 @@
 			<artifactId>jpf-boot</artifactId>
 			<version>1.5</version>
 		</dependency>
-		<dependency>
+		<dependency> <!-- Repast depency that does not work with Java 16 or up (illegal reflection) -->
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>3.3.0</version>
