--- a/bw4t-client/pom.xml
+++ b/bw4t-client/pom.xml
@@ -128,10 +128,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-                    					<Main-Class>${java.main.class}</Main-Class>
-                    					<Multi-Release>true</Multi-Release>
-                  					</manifestEntries>
+									<mainClass>${java.main.class}</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
